<resources>
    <string name="app_name">有缘恋爱交友</string>
    <string name="app_name_short">有缘</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="tab_find_love">主页</string>
    <string name="tab_found">发现</string>
    <string name="tab_message">消息</string>
    <string name="tab_personal">我</string>
    <string name="img_from">图片来源</string>
    <string name="ok">确定</string>
    <string name="turn_on">开通</string>
    <string name="save">保存</string>
    <string name="update">立即更新</string>
    <string name="publish">发布</string>
    <string name="cancel">取消</string>
    <string name="until_single">继续单身</string>
    <string name="photograph">拍照</string>
    <string name="albums">相册</string>
    <string name="vip_center">会员中心</string>
    <string name="download_make_money">免费赚钱</string>
    <string name="identify">身份认证</string>
    <string name="money_packet">钱包</string>
    <string name="my_money">我的零钱</string>
    <string name="input_money">充值</string>
    <string name="ouput_money">提现</string>
    <string name="money_output">零钱提现</string>
    <string name="output_money_count">提现金额</string>
    <string name="message">私信</string>
    <string name="attention">关注</string>
    <string name="attentioned">已关注</string>
    <string name="my_attention">我的关注</string>
    <string name="my_gifts">我的礼物</string>
    <string name="my_appointment">我的约会</string>
    <string name="send_red_packet">发红包</string>
    <string name="who_attention_me">谁关注我</string>
    <string name="who_good_for_me">谁赞了我</string>
    <string name="good_success">点赞成功</string>
    <string name="modify_info">修改资料</string>
    <string name="user_info">用户信息</string>
    <string name="personal_setting">个人设置</string>
    <string name="personal_signature">个性签名</string>
    <string name="select_image">选择图片</string>
    <string name="image_scan">图片浏览</string>
    <string name="lovers_service">红娘尊贵服务</string>
    <string name="success_case">成功案例</string>
    <string name="near_party">相亲活动</string>
    <string name="party_detail">活动详情</string>
    <string name="tv_party_detail">【活动详情】</string>
    <string name="party_img">【活动图片】</string>
    <string name="reward">抽奖活动</string>
    <string name="reward_info">抽奖活动说明：\n\n 1、购买套餐达200元，可以进行3次抽奖 \n 2、活动截止日期2017-03-31</string>
    <string name="recommend">推荐用户失败,请重新获取</string>
    <string name="phone_un_register">该手机号码还未注册过该软件，请先注册</string>
    <string name="regist_params_error">注册参数错误，请检查</string>
    <string name="dynamic_content_hint">表达一下此刻的心情吧...</string>
    <string name="real_name">真实姓名</string>
    <string name="input_real_name">请输入您的真实姓名</string>
    <string name="input_id_card">请输入您的身份证号</string>
    <string name="error_id_card">您输入的身份证号不正确，请重新输入</string>
    <string name="id_card">身份证号</string>
    <string name="id_card_img_text">身份证正面照片</string>
    <string name="identify_info">提交身份认证，立即赠送100金币</string>
    <string name="upload_tips">请先上传身份证</string>
    <string name="identify_tips">已提交身份信息，工作人员将在7个工作日内进行审核，请耐心等待</string>
    <string name="upload_identify_tips">注：请放心提交身份认证，公司将对用户的私人信息进行严格的保密</string>
    <string name="identifing">认证中...，请耐心等待</string>
    <string name="identify_success">认证成功</string>
    <string name="identified">已认证</string>
    <string name="submit">提交审核</string>
    <string name="org_price">原价%1$d金币</string>
    <string name="gift_market">礼物商城</string>
    <string name="gift">礼物</string>
    <string name="send_gift_success">赠送礼物成功，等待TA向你发出约会邀请吧</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="nick_name">昵称</string>
    <string name="portrait">头像</string>
    <string name="constellation">星座</string>
    <string name="tall">身高</string>
    <string name="weight">体重</string>
    <string name="blood_type">血型</string>
    <string name="occupation">职业</string>
    <string name="salary">收入</string>
    <string name="education">学历</string>
    <string name="where">喜欢爱爱地点</string>
    <string name="doWhatFirst">首次见面希望</string>
    <string name="purpose">交友目的</string>
    <string name="conception">恋爱观念</string>
    <string name="married_state">情感状态</string>
    <string name="lable">我的个性标签</string>
    <string name="satisfacies_part">我的魅力部位</string>
    <string name="intrest">我的兴趣</string>
    <string name="turn_on_to_vip">只对会员开放</string>
    <string name="tab_photo_tips">还未上传过照片哦</string>
    <string name="quit">退出</string>
    <string name="new_version">检测到有新版本</string>
    <string name="download">下载</string>
    <string name="downloading">正在下载中...</string>
    <string name="download_progress">下载进度:%.2f%%</string>
    <string name="download_fail">下载失败，请重试</string>
    <string name="download_finish">下载完成，点击安装</string>
    <string name="download_finished">下载完成</string>
    <string name="download_fail_retry">下载失败是否重试？</string>
    <string name="arrive_limit_count">已达到最大选择数</string>
    <string name="login_register">登录与注册</string>
    <string name="input_phone">输入您的手机号码</string>
    <string name="input_phone_or_account">输入您的手机号码或帐号</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_re_password">请确认密码</string>
    <string name="input_password_different">两次输入密码不一致</string>
    <string name="phone_description">不用担心,我们不会公开您的手机号码。注册即表明您同意我们的《服务协议》</string>
    <string name="send_captcha">发送验证码</string>
    <string name="captcha_success">验证成功</string>
    <string name="captcha_faiure">验证失败</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新的密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="again_input_password_tips">请再次输入密码</string>
    <string name="phone">手机号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="captcha_sned_tips">我们已发送验证码短信到这个号码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="get_capt_cha">获取验证码</string>
    <string name="get_capt_cha_failure">获取验证码失败</string>
    <string name="captcha">验证码</string>
    <string name="register_submit">提交注册</string>
    <string name="phone_already_register">该手机号码已注册</string>
    <string name="next">下一步</string>
    <string name="next_one">下一个</string>
    <string name="input_phone_number_error">输入的手机号码格式不正确</string>
    <string name="select_sex">性别选择</string>
    <string name="select_sex_tips">您选择的性别是：%1$s,性别确定后不可更改，是否确定？</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="love">喜欢</string>
    <string name="input_phone_num_tips">请输入您注册时的手机号码,我们将发送验证码到您的手机</string>
    <string name="un_bangding">未绑定</string>
    <string name="already_bangding">已绑定</string>
    <string name="bangding_phone">绑定手机</string>
    <string name="bangding_success">绑定成功</string>
    <string name="bangding_faile">绑定失败</string>
    <string name="modify_user_info">完善资料,让更多人认识您</string>
    <string name="qq">QQ号</string>
    <string name="weixin">微信号</string>
    <string name="ali_pay">支付宝支付(推荐)</string>
    <string name="ali_pay_info">使用支付宝支付,额外赠送500金币</string>
    <string name="pay_info_ali">额外赠送%1$s金币</string>
    <string name="pay_info">立减%1$s元</string>
    <string name="weixin_pay">微信支付</string>
    <string name="send_telephone_fare">(送%1$d元话费)</string>
    <string name="pay_type">请选择支付方式</string>
    <string name="location_symbol">[位置]</string>
    <string name="file_symbol">[文件]</string>
    <string name="image_symbol">[图片]</string>
    <string name="voice_symbol">[语音]</string>
    <string name="voip_symbol">[电话]</string>
    <string name="rpt_symbol">[红包]</string>
    <string name="reward_count_over">您的抽奖次数已经用完，继续购买套餐又可获得3次抽奖机会</string>
    <string name="no_reward_count">您的抽奖次数为0，购买套餐可获得3次抽奖机会</string>
    <string name="see_more_send_gift_data">您还不是会员,暂时只能查看前10位给您送礼物的用户,查看更多，立即开通会员？</string>
    <string name="see_more_data">您还不是会员,，暂时只能查看前10位关注了您的用户，查看更多，立即开通会员？</string>
    <string name="un_send_msg">您还不是会员,不能发送消息,立即开通会员？</string>
    <string name="un_select_distance">您还不是会员,不能选择距离自己的范围,立即开通会员？</string>
    <string name="un_see_attention_and_love">查看更多,立即开通会员？</string>
    <string name="turn_vip">该视频只能是会员才可以观看,请先开通会员</string>
    <string name="buy_gold">查看该视频需要消耗%1$d枚金币,你的金币数量不足,请先购买</string>
    <string name="no_gold">你的金币数量不足,请先购买</string>
    <string name="un_call">亲,升级VIP即可给所有人打电话,立即开通会员？</string>
    <string name="un_see_video">亲,升级VIP即可观看所有人的视频,立即开通会员？</string>
    <string name="social_id_need_vip">您还不是会员,不能查看%1$s号,开通会员即可无限查看</string>
    <string name="social_id_need_gold">您账户中无金币,无法查看%1$s号,购买金币即可无限查看</string>
    <string name="social_id_need_more_gold">查看%1$s号需账户中金币数量大于100,您账户中金币数量不足,购买即可无限查看</string>
    <string name="no_gold_un_send_msg">您账户中金币数量不足,暂时不能发送消息,购买金币即可无限畅聊</string>
    <string name="upload_portrait_tips">上传头像才能让更多人认识您</string>
    <string name="upload">上传</string>
    <string name="upload_success">上传成功</string>
    <string name="success_copy">已复制</string>
    <string name="chat_message">聊天消息</string>
    <string name="login_tips">您还未登陆，请先登陆</string>
    <string name="send_failure">发送失败</string>
    <string name="send">发送</string>
    <string name="share_location">分享位置</string>
    <string name="yuan_fen">缘分</string>
    <string name="find_yuan_fen">正在为您推荐缘分</string>
    <string name="image_preview">图片预览</string>
    <string name="publish_dynamic">发表动态</string>
    <string name="publish_success">发布成功</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="like">喜欢</string>
    <string name="liked">已喜欢</string>
    <string name="like_success">喜欢成功</string>
    <string name="like_faiure">喜欢失败</string>
    <string name="attention_success">关注成功</string>
    <string name="attention_faiure">关注失败</string>
    <string name="cancle_attention">取消关注</string>
    <string name="i_like_you">我喜欢你</string>
    <string name="quite_success">退出成功</string>
    <string name="quite_faiure">退出失败</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_faiure">修改失败</string>
    <string name="create_order_faiure">生成订单失败</string>
    <string name="input_msg">输入消息...</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="search">筛选</string>
    <string name="search_option">筛选条件</string>
    <string name="notification_tips">%1$d个联系人发来%2$d条消息</string>
    <string name="init_official_message">如今您的气质里，藏着您走过的路，读过的书和爱过的人，在这里遇见您可爱的TA</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="video_show">视频秀</string>
    <string name="video_detail">视频详情</string>
    <string name="start_num">%1$d次播放</string>
    <string name="gold_num">%1$d枚金币</string>
    <string name="send_gold_num">(赠送%1$d枚金币)</string>
    <string name="select_gold_num_text">请选择金币</string>
    <string name="input_hint">请输入您宝贵的意见或建议</string>
    <string name="official_qq">如有任何疑问，可联系官方客服QQ：2350635875</string>
    <string name="tv_refund">退费说明：\n我司为了更加重视和关注完善用户体验，根据有旧版本的用户的相关反馈，特意提供退费联系人信息。也请新用户继续监督和提供宝贵的意见和建议。谢谢！\n注意，退款需要提供以下信息：\n1.退款方式\n2.退款联系人相关信息\n3.支付宝账户、微信账户、银行卡号 三者选一\n\n客服QQ：2350635875</string>
    <string name="geting_tel_fare">充值送话费活动火热进行中!</string>
    <string name="get_tel_fare">领取话费</string>
    <string name="get_tel_fare_activity">--------送话费活动介绍--------</string>
    <string name="get_tel_fare_qualification">(一) 参与资格</string>
    <string name="get_tel_fare_rule">(二) 领取规则</string>
    <string name="get_tel_fare_condition">(三) 领取条件</string>
    <string name="get_tel_fare_way">(四) 领取方式</string>
    <string name="give_vip_tips">应用市场5星好评送会员要求：</string>
    <string name="give_vip_steps">1.点击跳转应用市场评论按钮\n\n2.按以上示例图片给出5星好评并且内容不少于10个字\n\n3.评论后截图上传将为您免费赠送3个月会员</string>
    <string name="skip_market">跳转应用市场5星好评</string>
    <string name="upload_market_img">上传好评截图</string>
</resources>