<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar_with_headerbar"/>

    <TextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/input_phone_num_tips"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/input_phone"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_focusColor="@color/colorPrimary"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/next"
        fancy:fb_textColor="#ffffffff"/>

</LinearLayout>