<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar_with_headerbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/give_vip_tips" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/example_img"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                app:actualImageScaleType="fitCenter"
                app:failureImage="@mipmap/app_comment"
                app:placeholderImage="@mipmap/app_comment"
                app:placeholderImageScaleType="fitCenter"
                app:roundedCornerRadius="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/give_vip_steps"
                android:textSize="12sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/skip_market"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                app:fb_defaultColor="@color/colorPrimary"
                app:fb_focusColor="@color/colorAccent"
                app:fb_radius="5dp"
                app:fb_text="@string/skip_market"
                app:fb_textColor="#ffffffff" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/upload_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:fb_defaultColor="@color/colorPrimary"
                app:fb_focusColor="@color/colorAccent"
                app:fb_radius="5dp"
                app:fb_text="@string/upload_market_img"
                app:fb_textColor="#ffffffff" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>