<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fancy="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/toolbar_actionbar_with_headerbar"/>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:maxLength="100"
        android:hint="@string/input_hint"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border"
        android:gravity="left|top"/>

    <TextView
        android:id="@+id/text_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginTop="-16dp"
        android:layout_gravity="right|bottom"
        android:textSize="12sp" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="5dp"
        fancy:fb_text="提交"
        fancy:fb_textColor="#ffffffff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_refund"/>

    <TextView
        android:id="@+id/offical_qq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/official_qq"/>

</LinearLayout>