<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/toolbar_actionbar_with_headerbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/captcha_sned_tips"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingLeft="@dimen/activity_horizontal_margin"
        	android:paddingRight="@dimen/activity_horizontal_margin">
            <EditText
	            android:id="@+id/sms_code"
	            android:layout_width="150dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginTop="10dp"
	            android:background="@drawable/rounded_rim_white_bg"
	            android:gravity="center"
	            android:hint="@string/input_captcha"
	            android:inputType="number"
	            android:maxLength="6"
	            android:maxLines="1"
	            android:paddingBottom="10dp"
	            android:paddingTop="10dp"
	            android:singleLine="true"
	            android:textSize="16sp" />
            <TextView 
                android:id="@+id/count_timer"
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sms_code"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
	            android:layout_marginTop="10dp"
	            android:paddingBottom="10dp"
	            android:paddingTop="10dp"
	            android:textSize="16sp"/>
            
            <mehdi.sakout.fancybuttons.FancyButton 
                android:id="@+id/re_get_cap"
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sms_code"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
	            android:layout_marginTop="10dp"
				android:layout_marginLeft="20dp"
	            android:paddingBottom="10dp"
	            android:paddingTop="10dp"
	            android:textSize="16sp"
	            fancy:fb_defaultColor="@color/colorPrimary"
            	fancy:fb_focusColor="@color/colorPrimaryDark"
            	fancy:fb_radius="5dp"
            	fancy:fb_text="@string/get_capt_cha"
            	fancy:fb_textColor="@android:color/white"
            	android:visibility="gone"/>
        </RelativeLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/next"
            fancy:fb_textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>